check front and homepage style integration

--- a/templates/admin/admin_user/invite.html.twig
+++ b/templates/admin/admin_user/invite.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Inviter des utilisateurs{% endblock %}
 
 {% block content %}
-    <div class="flex-1 flex flex-col bg-gray-50">
+    <div class="flex-1 flex flex-col bg-gray-50 px-4">
         <!-- Flash Messages -->
         {% for label, messages in app.flashes %}
             {% for message in messages %}
