--- a/templates/components/footer.html.twig
+++ b/templates/components/footer.html.twig
@@ -2,9 +2,9 @@
 <footer class="bg-rose-500 text-white py-16">
 	<div class="max-w-7xl mx-auto px-6">
 		<div class="text-center space-y-8">
-			<h3 class="text-4xl font-bold">
-				<span class="pink-underline">أوال فيمينا</span>
-			</h3>
+			<div class="text-center font-bold">
+				<img src="{{ asset('build/images/logo.svg') }}" alt="Logo" class="w-28 h-28 mx-auto">
+			</div>
 			<p class="text-xl max-w-3xl mx-auto">
 				مجلة نسائية ثقافية شهرية تعنى بالإبداع النسائي
 				<br><br>
