--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -740,3 +740,7 @@ body {
 .shadow-custom-lg {
   box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
 }
+
+.anywhere-words {
+  word-wrap: anywhere;
+}
