--- a/templates/admin/admin_article/show.html.twig
+++ b/templates/admin/admin_article/show.html.twig
@@ -9,7 +9,7 @@
 {% block content %}
 
 	<div
-		class="flex-1 flex flex-col bg-gray-50">
+		class="flex-1 flex flex-col bg-gray-50 px-4">
 		<!-- Header -->
 		<header class="bg-white py-6 border-b border-gray-200">
 			<div class="flex flex-wrap justify-between items-center gap-4">
@@ -84,6 +84,7 @@ if (isModalAnimating)
 return;
 
 
+
 articleToPublish = button.getAttribute('data-article-id');
 csrfTokenForPublish = button.getAttribute('data-csrf-token');
 
@@ -120,6 +121,7 @@ function hidePublishModal() {
 console.log('hidePublishModal called');
 if (isModalAnimating) 
 return;
+
 
 
 const modal = document.getElementById('publishedModal');
