--- a/templates/admin/contenu/index.html.twig
+++ b/templates/admin/contenu/index.html.twig
@@ -7,7 +7,7 @@
 {% block content %}
 	<!-- Main Content -->
 	<div
-		class="flex-1 flex flex-col bg-gray-50">
+		class="flex-1 flex flex-col bg-gray-50 px-4">
 		<!-- Header -->
 
 		<header class="bg-white py-6 border-b border-gray-200">
@@ -81,7 +81,7 @@
 												<img src="{{ asset('build/images/icons/edit.svg') }}" alt="Modifier" class="w-5 h-5 min-w-4 min-h-4">
 											</a>
 
-											<button class="delete-btn text-gray-400 hover:text-red-600 transition duration-150 cursor-pointer" title="Supprimer" data-article-id="{{ article.id }}" data-csrf-token="{{ csrf_token('delete' ~ article.id) }}">
+											<button class="delete-btn text-gray-400 hover:text-red-600 transition duration-150 cursor-pointer" title="Supprimer" data-article-id="{{ contenu.id }}" data-csrf-token="{{ csrf_token('delete' ~ contenu.id) }}">
 												<img src="{{ asset('build/images/icons/trash.svg') }}" alt="Supprimer" class="w-5 h-5  min-w-4 min-h-4">
 											</button>
 										</div>
