--- a/templates/admin/contenu/show.html.twig
+++ b/templates/admin/contenu/show.html.twig
@@ -7,7 +7,7 @@
 
 {% block content %}
 	<div
-		class="flex-1 flex flex-col bg-gray-50">
+		class="flex-1 flex flex-col bg-gray-50 px-4">
 		<!-- Header -->
 		<header class="bg-white py-6 border-b border-gray-200">
 			<div class="flex flex-wrap justify-between items-center gap-4 px-4">
