--- a/templates/home/sections/hero.html.twig
+++ b/templates/home/sections/hero.html.twig
@@ -11,13 +11,11 @@
 	<div class="dots-pattern-2"></div>
 
 	<div class="relative z-10 text-center px-6">
-		<h1 class="text-7xl font-bold mb-6">
-			<span class="pink-underline">أوال فيمينا</span>
-		</h1>
+		<img src="{{ asset('build/images/logo.svg') }}" alt="Awal Femina" class="h-27 md:h-40 w-auto object-contain mx-auto mb-6">
 		<p class="text-2xl mb-4 text-gray-200">مجلة نسائية ثقافية شهرية</p>
 		<p class="text-lg text-gray-300 max-w-3xl mx-auto mb-12">
 			منصة ثقافية تعنى بالإبداع النسائي وتسليط الضوء على قضايا المرأة
-																		          المعاصرة من منظور<br/>فكري وأدبي عميق
+																																																									          المعاصرة من منظور<br/>فكري وأدبي عميق
 		</p>
 
 		<div class="flex gap-4 justify-center">
