--- a/templates/opinion/index.html.twig
+++ b/templates/opinion/index.html.twig
@@ -5,7 +5,7 @@
 
 {% block content %}
     <!-- Main Content -->
-    <div class="flex-1 flex flex-col bg-gray-50">
+    <div class="flex-1 flex flex-col bg-gray-50 px-4">
         <!-- Header -->
         <header class="bg-white py-6 border-b border-gray-200">
             <div class="flex flex-wrap justify-between items-center gap-4">
