--- a/templates/security/registration/mail-send.html.twig
+++ b/templates/security/registration/mail-send.html.twig
@@ -1,25 +1,27 @@
 {% extends 'auth.html.twig' %}
 
-{% block title %} {{ 'register.title'|trans }}{% endblock %}
+{% block title %}
+	{{ 'register.title'|trans }}
+{% endblock %}
 
 {% block content %}
 
-<div id="loginForm" class="form-container max-w-md mx-auto w-full">
-    <img src="{{ asset('build/images/auth/icons/reset-password-mail.svg') }}" alt="reset-password" class="mb-4 mx-auto" />
+	<div id="loginForm" class="form-container max-w-md mx-auto w-full">
 
-    <h1 class="text-center text-2xl md:text-3xl font-semibold text-midnight mb-3">
+		<h1 class="text-center text-2xl md:text-3xl font-semibold text-midnight mb-3">
 
-    {{ 'register.verify.title'|trans }}</h1>
+			{{ 'register.verify.title'|trans }}</h1>
 
-    <p class="text-steel mb-6 md:mb-8 text-md text-center">
-       {{ 'register.verify.message'|trans }} {{ email }}.
-  </p>
+		<p class="text-steel mb-6 md:mb-8 text-md text-center">
+			{{ 'register.verify.message'|trans }}
+			{{ email }}.
+		</p>
 
-    <p class="mt-6 text-center text-steel text-sm md:text-base">
-        <a href="{{ path('app_login') }}" class="text-grey-600 hover:text-primary-700 font-medium flex items-center justify-center gap-2">
-            <img src="{{ asset('build/images/auth/icons/password.svg') }}" alt="reset-password" class="inline-block" />
-            {{ 'register.verify.backToLogin'|trans }}
-        </a>
-    </p>
-</div>
-    {% endblock %}
+		<p class="mt-6 text-center text-steel text-sm md:text-base">
+			<a href="{{ path('app_login') }}" class="text-grey-600 hover:text-primary-700 font-medium flex items-center justify-center gap-2">
+				<img src="{{ asset('build/images/auth/icons/password.svg') }}" alt="reset-password" class="inline-block"/>
+				{{ 'register.verify.backToLogin'|trans }}
+			</a>
+		</p>
+	</div>
+{% endblock %}
