--- a/templates/security/resetPassword/emailForm.html.twig
+++ b/templates/security/resetPassword/emailForm.html.twig
@@ -1,35 +1,36 @@
 {% extends 'auth.html.twig' %}
 
-{% block title %} {{ 'resetPassword.title'|trans }}{% endblock %}
+{% block title %}
+	{{ 'resetPassword.title'|trans }}
+{% endblock %}
 
 {% block content %}
-<div id="loginForm" class="form-container max-w-md mx-auto w-full">
+	<div id="loginForm" class="form-container max-w-md mx-auto w-full">
 
-    <img src="{{ asset('build/images/auth/icons/reset-password.svg') }}" alt="reset-password" class="mb-4 mx-auto" />
-    <h1 class="text-2xl text-center md:text-3xl font-semibold text-midnight mb-3">
-       {{ 'resetPassword.title'|trans }}
-    </h1>
-    <p class="text-steel mb-6 md:mb-8 text-sm md:text-base text-center">
-        {{ 'resetPassword.subtitle'|trans|raw }}
-    </p>
-    {{ form_errors(form) }}
+		<h1 class="text-2xl text-center md:text-3xl font-semibold text-midnight mb-3">
+			{{ 'resetPassword.title'|trans }}
+		</h1>
+		<p class="text-steel mb-6 md:mb-8 text-sm md:text-base text-center">
+			{{ 'resetPassword.subtitle'|trans|raw }}
+		</p>
+		{{ form_errors(form) }}
 
 
-    {{ form_start(form) }}
+		{{ form_start(form) }}
 
-    {{ form_row(form.email) }}
+		{{ form_row(form.email) }}
 
-    <button class="mt-6 w-full cursor-pointer bg-[#A81B60] text-white py-2.5 px-4 rounded-lg font-medium hover:bg-[#A81B60]-700 active:bg-[#A81B60]-700 transition duration-200 text-sm md:text-base focus:outline-none focus:ring-2 focus:ring-[#A81B60]-600 focus:ring-offset-2" type="submit">
-        {{ 'resetPassword.button'|trans }}
-    </button>
+		<button class="mt-6 w-full cursor-pointer bg-[#A81B60] text-white py-2.5 px-4 rounded-lg font-medium hover:bg-[#A81B60]-700 active:bg-[#A81B60]-700 transition duration-200 text-sm md:text-base focus:outline-none focus:ring-2 focus:ring-[#A81B60]-600 focus:ring-offset-2" type="submit">
+			{{ 'resetPassword.button'|trans }}
+		</button>
 
-    {{ form_end(form) }}
+		{{ form_end(form) }}
 
-    <p class="mt-6 text-center text-steel text-sm md:text-base">
-        <a href="{{ path('app_login') }}" class="text-grey-600 hover:text-primary-700 font-medium flex items-center justify-center gap-2">
-            <img src="{{ asset('build/images/auth/icons/password.svg') }}" alt="reset-password" class="inline-block" />
-            {{ 'resetPassword.backToLogin'|trans }}
-        </a>
-    </p>
-</div>
+		<p class="mt-6 text-center text-steel text-sm md:text-base">
+			<a href="{{ path('app_login') }}" class="text-grey-600 hover:text-primary-700 font-medium flex items-center justify-center gap-2">
+				<img src="{{ asset('build/images/auth/icons/password.svg') }}" alt="reset-password" class="inline-block"/>
+				{{ 'resetPassword.backToLogin'|trans }}
+			</a>
+		</p>
+	</div>
 {% endblock %}
