--- a/templates/security/resetPassword/success.html.twig
+++ b/templates/security/resetPassword/success.html.twig
@@ -1,17 +1,19 @@
 {% extends 'auth.html.twig' %}
 
-{% block title %} {{ 'resetPassword.title'|trans }}{% endblock %}
+{% block title %}
+	{{ 'resetPassword.title'|trans }}
+{% endblock %}
 
 {% block content %}
-    <div id="loginForm" class="form-container max-w-md mx-auto w-full text-center">
-        <img src="{{ asset('build/images/auth/icons/reset-password-success.svg') }}" alt="reset-password" class="mb-4 mx-auto" />
-        <h1 class="text-2xl text-center md:text-3xl font-bold text-midnight mb-3">
-           {{   'resetPassword.messageAfterReset.title'|trans }}
-        </h1>
-        <p class="text-steel mb-6 md:mb-8 text-sm md:text-base text-center">
+	<div id="loginForm" class="form-container max-w-md mx-auto w-full text-center">
+		<h1 class="text-2xl text-center md:text-3xl font-bold text-midnight mb-3">
+			{{   'resetPassword.messageAfterReset.title'|trans }}
+		</h1>
+		<p class="text-steel mb-6 md:mb-8 text-sm md:text-base text-center">
 
-  {{ 'resetPassword.messageAfterReset.message'|trans }}
-          </p>
-        <a href="{{ url('app_login') }}" class="w-full cursor-pointer bg-primary-600 text-white py-2.5 px-4 rounded-lg font-medium hover:bg-primary-700 active:bg-primary-700 transition duration-200 text-sm md:text-base focus:outline-none focus:ring-2 focus:ring-primary-600 focus:ring-offset-2" >  {{ 'resetPassword.messageAfterReset.button'|trans }}</a>
-    </div>
+			{{ 'resetPassword.messageAfterReset.message'|trans }}
+		</p>
+		<a href="{{ url('app_login') }}" class="w-full cursor-pointer bg-primary-600 text-white py-2.5 px-4 rounded-lg font-medium hover:bg-primary-700 active:bg-primary-700 transition duration-200 text-sm md:text-base focus:outline-none focus:ring-2 focus:ring-primary-600 focus:ring-offset-2">
+			{{ 'resetPassword.messageAfterReset.button'|trans }}</a>
+	</div>
 {% endblock %}
