--- a/templates/admin/admin_article/show.html.twig
+++ b/templates/admin/admin_article/show.html.twig
@@ -9,9 +9,9 @@
 {% block content %}
 
 	<div
-		class="flex-1 flex flex-col bg-gray-50 px-4">
+		class="flex-1 flex flex-col  px-4 bg-white">
 		<!-- Header -->
-		<header class="bg-white py-6 border-b border-gray-200">
+		<header class=" py-6 border-b border-gray-200">
 			<div class="flex flex-wrap justify-between items-center gap-4">
 				<div>
 					<h1 class="text-2xl font-semibold text-gray-900">
