--- a/templates/components/navbar.html.twig
+++ b/templates/components/navbar.html.twig
@@ -35,7 +35,7 @@
 								<a href="{{ path('app_admin_user_show', {'id': app.user.id}) }}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-rose-50 hover:text-rose-500 text-right transition">
 									الملف الشخصي
 								</a>
-								<a href="{{ path('app_admin_article_index') }}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-rose-50 hover:text-rose-500 text-right transition">
+								<a href="{{ path('app_contenu_index') }}" class="block px-4 py-2 text-sm text-gray-700 hover:bg-rose-50 hover:text-rose-500 text-right transition">
 									لوحة التحكم
 								</a>
 								<div class="border-t border-gray-100 my-1"></div>
