--- a/templates/contenu_numero/index.html.twig
+++ b/templates/contenu_numero/index.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block page_content %}
-	<section class="py-24 bg-white">
+	<section class="py-24 bg-white" dir="rtl">
 		<div
 			class="max-w-7xl mx-auto px-6">
 			<!-- Main Title -->
