--- a/templates/admin/admin_about/_form.html.twig
+++ b/templates/admin/admin_about/_form.html.twig
@@ -6,7 +6,7 @@
     <img src="{{ asset('build/images/icons/upload.svg') }}" alt="User"  width="40" height="40" class="rounded-full m-w-">
     <!-- Icône upload -->
     <p class="text-gray-600 text-center mt-2 font-bold text-sm md:text-lg">
-        <span class="text-primary-600">Cliquez pour télécharger une Image</span>
+        <span class="text-pink-800">Cliquez pour télécharger une Image</span>
         <br/>
         SVG, PNG, JPG or GIF (max. 800x400px)<br>
         La taille de l'image ne doit pas dépasser {{ maxTaille }}
