--- a/templates/admin/admin_categorie/_form.html.twig
+++ b/templates/admin/admin_categorie/_form.html.twig
@@ -12,7 +12,7 @@
             Annuler
         </a>
 
-        <button type="submit" class="bg-teal-600 text-white px-4 py-2 rounded-lg flex items-center hover:bg-teal-700 transition duration-200 font-semibold cursor-pointer">
+        <button type="submit" class="bg-pink-600 text-white px-4 py-2 rounded-lg flex items-center hover:bg-teal-700 transition duration-200 font-semibold cursor-pointer">
             Enregistrer
         </button>
     </div>
