--- a/templates/components/navbar.html.twig
+++ b/templates/components/navbar.html.twig
@@ -22,7 +22,7 @@
 				<!-- Admin Dropdown (Desktop) -->
 				{% if app.user and is_granted('ROLE_ADMIN') %}
 					<div class="hidden md:block relative group">
-						<button class="flex items-center gap-2 text-gray-700 hover:text-rose-500 transition focus:outline-none font-bold">
+						<button class="mr-2 flex items-center gap-2 text-gray-700 hover:text-rose-500 transition focus:outline-none font-bold">
 							<span>حسابي</span>
 							<svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewbox="0 0 24 24" stroke="currentColor">
 								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"/>
