--- a/templates/opinion/show.html.twig
+++ b/templates/opinion/show.html.twig
@@ -59,7 +59,7 @@
                     Retour à la liste
                 </a>
                 <a href="{{ path('app_opinion_edit', {'id': opinion.id}) }}"
-                   class="bg-teal-600 text-white px-4 py-2 rounded-lg hover:bg-teal-700 transition duration-200">
+                   class="bg-pink-600 text-white px-4 py-2 rounded-lg hover:bg-teal-700 transition duration-200">
                     Modifier
                 </a>
             </div>
