--- a/templates/admin/admin_about/show.html.twig
+++ b/templates/admin/admin_about/show.html.twig
@@ -20,7 +20,7 @@
 					<a href="{{ path('app_admin_about_index') }}" class="flex  items-center cursor-pointer px-4 py-2 bg-white border border-light-gray-100 text-gray-700 rounded-lg hover:bg-gray-100">
 						Retour
 					</a>
-					<a href="{{ path('app_admin_about_edit', {'id': about.id}) }}" class="flex items-center cursor-pointer px-4 py-2 bg-teal-600 text-white rounded-lg hover:bg-teal-700">
+					<a href="{{ path('app_admin_about_edit', {'id': about.id}) }}" class="flex items-center cursor-pointer px-4 py-2 bg-pink-600 text-white rounded-lg hover:bg-teal-700">
 						<svg class="w-4 h-4 mr-2" fill="none" stroke="currentColor" viewbox="0 0 24 24">
 							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z"></path>
 						</svg>
