--- a/templates/admin/admin_article/_form.html.twig
+++ b/templates/admin/admin_article/_form.html.twig
@@ -161,13 +161,15 @@
     <hr class="text-gray-300 my-2">
 </div>
 {% set maxTaille = "20Mo" %}
+{% set maxTailleMedia = "500Mo" %}
+
 {{ form_start(form, {'attr': {'class': 'mx-auto p-6 bg-white rounded-lg shadow-sm'}}) }}
 
     <label class="flex-col mb-8 mt-4 flex items-center justify-center cursor-pointer pb-3 pt-3 px-4 md:px-0" style="border: 1px solid #E3EDF2">
         <img src="{{ asset('build/images/icons/upload.svg') }}" alt="User"  width="40" height="40" class="rounded-full m-w-">
         <!-- Icône upload -->
         <p class="text-gray-600 text-center mt-2 font-bold text-sm md:text-lg">
-            <span class="text-primary-600">Cliquez pour télécharger une Image</span>
+            <span class="text-pink-600">Cliquez pour télécharger une Image</span>
             <br/>
             SVG, PNG, JPG or GIF (max. 800x400px)<br>
             La taille de l'image ne doit pas dépasser {{ maxTaille }}
@@ -207,10 +209,10 @@
         <img src="{{ asset('build/images/icons/upload.svg') }}" alt="Media"  width="40" height="40" class="rounded-full m-w-">
         <!-- Icône upload média -->
         <p class="text-gray-600 text-center mt-2 font-bold text-sm md:text-lg">
-            <span class="text-primary-600">Cliquez pour télécharger une Média</span><br>
+            <span class="text-pink-600">Cliquez pour télécharger une Média</span><br>
              ( Audio ou Video )
             <br/>
-            La taille du média ne doit pas dépasser {{ maxTaille }}
+            La taille du média ne doit pas dépasser {{ maxTailleMedia }}
         </p>
 
         {{ form_row(form.media) }}
@@ -226,7 +228,6 @@
                 <p id="media-file-name" class="text-gray-600 font-bold text-xs">{{ media.name }}</p>
                 <p id="media-file-size" class="text-gray-600 font-bold text-xs">Size: {{ media.size ?? 'Unknown' }}</p>
             </div>
-            {% if isManager %} <img src="{{ asset('build/images/icons/valid-yellow.svg') }}" class="w-5 h-5 rounded-2xl min-w-5 min-h-5 object-cover" alt="Valid"> {% else %} <img src="{{ asset('build/images/icons/valid.svg') }}" class="w-5 h-5 rounded-2xl min-w-5 min-h-5 object-cover" alt="Valid"> {% endif %}
         </div>
     </div>
 
@@ -238,7 +239,6 @@
                 <p id="media-file-name" class="text-gray-600 font-bold text-xs">Aucun fichier média sélectionné</p>
                 <p id="media-file-size" class="text-gray-600 font-bold text-xs">Size: 0 KB</p>
             </div>
-            {% if isManager %} <img data-user="{{ isManager }}" id="media-img-valid" src="" class="w-5 h-5 rounded-2xl min-w-5 min-h-5 object-cover"  style="display: none" alt="Valid"> {% else %} <img data-user="{{ isManager }}" id="media-img-valid" style="display: none" src="" class="w-5 h-5 rounded-2xl min-w-5 min-h-5 object-cover" alt="Valid"> {% endif %}
         </div>
     </div>
 {% endif %}
