--- a/templates/admin/admin_user/edit.html.twig
+++ b/templates/admin/admin_user/edit.html.twig
@@ -48,7 +48,7 @@
                                 Annuler
                             </button>
                         </a>
-                        <button type="submit" class="hover:bg-teal-700 hover:cursor-pointer focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-teal-500 px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-teal-600 hover:bg-teal-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-teal-500">
+                        <button type="submit" class="hover:bg-teal-700 hover:cursor-pointer focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-teal-500 px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-pink-600 hover:bg-teal-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-teal-500">
                             Enregistrer les modifications
                         </button>
                     </div>
