--- a/templates/admin/contenu/_form.html.twig
+++ b/templates/admin/contenu/_form.html.twig
@@ -31,7 +31,7 @@
 
 	{{ form_row(form.publish_button, {
     'attr': {
-        'class': 'w-full md:w-auto bg-teal-600 text-white px-4 py-2 rounded-lg font-semibold flex items-center justify-center gap-2 hover:bg-teal-700 transition'
+        'class': 'w-full md:w-auto bg-pink-600 text-white px-4 py-2 rounded-lg font-semibold flex items-center justify-center gap-2 hover:bg-teal-700 transition'
     }
 }) }}
 </div>
