--- a/templates/author/index.html.twig
+++ b/templates/author/index.html.twig
@@ -165,7 +165,7 @@
                     {% if not app.request.get('search') %}
                     <div class="mt-6">
                         <a href="{{ path('app_author_new') }}"
-                           class="inline-flex items-center px-4 py-2 bg-teal-600 text-white rounded-lg hover:bg-teal-700 transition duration-200 font-semibold gap-2">
+                           class="inline-flex items-center px-4 py-2 bg-pink-600 text-white rounded-lg hover:bg-teal-700 transition duration-200 font-semibold gap-2">
                             <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M10 4V16M4 10H16" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
