--- a/templates/author/new.html.twig
+++ b/templates/author/new.html.twig
@@ -1,11 +1,19 @@
 {% extends 'admin.html.twig' %}
 
-{% block title %}New Author{% endblock %}
+{% block title %}New Author
+{% endblock %}
 
 {% block content %}
-    <h1>اضافة كاتب</h1>
+	<h1>اضافة كاتب</h1>
 
-    {{ include('author/_form.html.twig') }}
+	<div class="flex justify-start mb-6">
+		<a href="{{ path('app_author_index') }}" class="inline-flex items-center px-4 py-2 bg-gray-100 hover:bg-gray-200 text-gray-700 font-medium rounded-lg transition-colors duration-200">
+			<svg class="w-5 h-5 ml-2" fill="none" stroke="currentColor" viewbox="0 0 24 24">
+				<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3"/>
+			</svg>
+			العودة إلى القائمة
+		</a>
+	</div>
 
-    <a href="{{ path('app_author_index') }}">العودة إلى القائمة</a>
+	{{ include('author/_form.html.twig') }}
 {% endblock %}
