--- a/templates/common/article_content.html.twig
+++ b/templates/common/article_content.html.twig
@@ -31,7 +31,7 @@
 					{# Lecteur Audio #}
 					<div class="bg-gray-100 rounded-lg p-4">
 						<div class="flex items-center gap-3 mb-3">
-							<svg class="w-10 h-10 text-primary-600 flex-shrink-0" fill="none" stroke="currentColor" viewbox="0 0 24 24">
+							<svg class="w-10 h-10 text-pink-600 flex-shrink-0" fill="none" stroke="currentColor" viewbox="0 0 24 24">
 								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19V6l12-3v13M9 19c0 1.105-1.343 2-3 2s-3-.895-3-2 1.343-2 3-2 3 .895 3 2zm12-3c0 1.105-1.343 2-3 2s-3-.895-3-2 1.343-2 3-2 3 .895 3 2zM9 10l12-3"></path>
 							</svg>
 							<div class="flex-1 min-w-0">
