--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -105,7 +105,7 @@
 
                         <!-- Submit Button -->
                         <div class="text-center">
-                            <button type="submit" class="w-full hover:cursor-pointer bg-teal-600 hover:bg-teal-700 text-white font-medium py-3 px-6 rounded-lg transition-colors duration-200 focus:outline-none focus:ring-2 focus:ring-teal-500 focus:ring-offset-2">
+                            <button type="submit" class="w-full hover:cursor-pointer bg-pink-600 hover:bg-teal-700 text-white font-medium py-3 px-6 rounded-lg transition-colors duration-200 focus:outline-none focus:ring-2 focus:ring-teal-500 focus:ring-offset-2">
                                  {{ 'ContactSection.page.form.button'|trans }}
                             </button>
                         </div>
