--- a/templates/security/registration/register.html.twig
+++ b/templates/security/registration/register.html.twig
@@ -45,7 +45,7 @@
         <p class=" text-[13px]  font-medium text-steel">{{ 'register.password.remarque'|trans }}</p>
     </div>
     <div class="flex items-center space-x-2">
-        {{ form_widget(registrationForm.agreeTerms, {'attr': {'class': 'h-4 w-4 text-primary-600 focus:ring-primary-500 border-gray-300 rounded'}}) }}
+        {{ form_widget(registrationForm.agreeTerms, {'attr': {'class': 'h-4 w-4 text-pink-600 focus:ring-primary-500 border-gray-300 rounded'}}) }}
     </div>
 
     <button class="w-full cursor-pointer bg-[#A81B60] text-white py-2.5 px-4 rounded-lg font-medium hover:bg-primary-700 active:bg-primary-700 transition duration-200 text-sm md:text-base focus:outline-none focus:ring-2 focus:ring-primary-600 focus:ring-offset-2" type="submit">
