--- a/templates/texte/_form.html.twig
+++ b/templates/texte/_form.html.twig
@@ -134,6 +134,8 @@ initSummernote();
 </div>
 
 {% set maxTaille = "20Mo" %}
+{% set maxTailleMedia = "500Mo" %}
+
 {{ form_start(form, {'attr': {'class': 'mx-auto p-6 bg-white rounded-lg shadow-sm'}}) }}
 
 <label class="flex-col mb-8 mt-4 flex items-center justify-center cursor-pointer pb-3 pt-3 px-4 md:px-0" style="border: 1px solid #E3EDF2">
@@ -141,7 +143,7 @@ initSummernote();
 	src="{{ asset('build/images/icons/upload.svg') }}" alt="Image" width="40" height="40" class="rounded-full m-w-">
 	<!-- Icône upload image -->
 	<p class="text-gray-600 text-center mt-2 font-bold text-sm md:text-lg">
-		<span class="text-primary-600">Cliquez pour télécharger une Image</span>
+		<span class="text-pink-600">Cliquez pour télécharger une Image</span>
 		<br/>
 		SVG, PNG, JPG or GIF (max. 800x400px)<br>
 		La taille de l'image ne doit pas dépasser
@@ -184,11 +186,11 @@ initSummernote();
 	src="{{ asset('build/images/icons/upload.svg') }}" alt="Media" width="40" height="40" class="rounded-full m-w-">
 	<!-- Icône upload média -->
 	<p class="text-gray-600 text-center mt-2 font-bold text-sm md:text-lg">
-		<span class="text-primary-600">Cliquez pour télécharger une Média</span><br>
+		<span class="text-pink-600">Cliquez pour télécharger une Média</span><br>
 		( Audio ou Video )
 		<br/>
 		La taille du média ne doit pas dépasser
-		{{ maxTaille }}
+		{{ maxTailleMedia }}
 	</p>
 
 	{{ form_row(form.media) }}
