--- a/templates/texte/showFront.html.twig
+++ b/templates/texte/showFront.html.twig
@@ -54,7 +54,7 @@
 			{% endif %}
 
 			<!-- Content -->
-			<div class="bg-stone-50 rounded-3xl p-6 md:p-12 shadow-sm">
+			<div class="bg-pink-50 rounded-3xl p-6 md:p-12 shadow-sm border-2 border-pink-600">
 				<div class="prose prose-lg prose-rose max-w-none mx-auto text-gray-700 leading-relaxed text-justify mb-8 [&_*]:!bg-transparent">
 					{{ texte.content|raw }}
 				</div>
