--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -56,7 +56,7 @@
 						<div class="flex justify-end space-x-3 pt-4">
 
 							<a href="{{ path('app_user_edit', {'id': user.id}) }}">
-								<button type="submit" class="hover:bg-teal-700 hover:cursor-pointer focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-teal-500 px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-teal-600 hover:bg-teal-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-teal-500">
+								<button type="submit" class="hover:bg-teal-700 hover:cursor-pointer focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-teal-500 px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-pink-600 hover:bg-teal-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-teal-500">
 									{{ 'myProfile.edit.label'|trans }}
 								</button>
 							</a>
